--- a/main.css
+++ b/main.css
@@ -1,5 +1,18 @@
 body{
 
     background: grey;
-
+    text-align: center;
+    margin: 0;
 }
+h1 {
+    font-size: 20px;
+    margin-bottom: 0;
+  }
+
+
+  img {
+    max-width: 100%;
+    height: auto;
+    margin: auto;
+  }
+
